Small text alignment fix

--- a/src/staff_augmentation/components/HireTopTalent/styles.module.scss
+++ b/src/staff_augmentation/components/HireTopTalent/styles.module.scss
@@ -23,7 +23,7 @@
   text-align: right;
   margin: auto 0 auto 20px;
 
-  @include for-tablet-down {
+  @include for-phone-only {
     text-align: center;
   }
 }
